; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_rbtree.c_ext2fs_rb_augment_insert.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_rbtree.c_ext2fs_rb_augment_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rb_node = type { %struct.rb_node*, %struct.rb_node* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ext2fs_rb_augment_insert(%struct.rb_node* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.rb_node*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.rb_node* %0, %struct.rb_node** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load %struct.rb_node*, %struct.rb_node** %4, align 8
  %8 = getelementptr inbounds %struct.rb_node, %struct.rb_node* %7, i32 0, i32 1
  %9 = load %struct.rb_node*, %struct.rb_node** %8, align 8
  %10 = icmp ne %struct.rb_node* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load %struct.rb_node*, %struct.rb_node** %4, align 8
  %13 = getelementptr inbounds %struct.rb_node, %struct.rb_node* %12, i32 0, i32 1
  %14 = load %struct.rb_node*, %struct.rb_node** %13, align 8
  store %struct.rb_node* %14, %struct.rb_node** %4, align 8
  br label %25

15:                                               ; preds = %3
  %16 = load %struct.rb_node*, %struct.rb_node** %4, align 8
  %17 = getelementptr inbounds %struct.rb_node, %struct.rb_node* %16, i32 0, i32 0
  %18 = load %struct.rb_node*, %struct.rb_node** %17, align 8
  %19 = icmp ne %struct.rb_node* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %15
  %21 = load %struct.rb_node*, %struct.rb_node** %4, align 8
  %22 = getelementptr inbounds %struct.rb_node, %struct.rb_node* %21, i32 0, i32 0
  %23 = load %struct.rb_node*, %struct.rb_node** %22, align 8
  store %struct.rb_node* %23, %struct.rb_node** %4, align 8
  br label %24

24:                                               ; preds = %20, %15
  br label %25

25:                                               ; preds = %24, %11
  %26 = load %struct.rb_node*, %struct.rb_node** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @ext2fs_rb_augment_path(%struct.rb_node* %26, i32 %27, i8* %28)
  ret void
}

declare dso_local i32 @ext2fs_rb_augment_path(%struct.rb_node*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
